# TSM

./: .gitignore  TSM_ADDENDA.md  TSM_CONSOLIDATION.md  pyproject.toml  tsm.md
configs/: fashion_mnist.yaml  mnist_smoke.yaml  synthetic_modes.yaml  synthetic_modes_no_ternary.yaml  temporal_objects.yaml  temporal_objects_active_file_query.yaml  temporal_objects_calibration_curved.yaml  temporal_objects_calibration_curved_3.yaml  temporal_objects_calibration_curved_4.yaml  temporal_objects_calibration_curved_4_wide.yaml  temporal_objects_contested_curved.yaml  temporal_objects_contested_curved_3.yaml  temporal_objects_contested_curved_4.yaml  temporal_objects_contested_curved_4_wide.yaml  temporal_objects_contested_position.yaml  temporal_objects_expected_active_file_gate.yaml  temporal_objects_expected_future_state.yaml  temporal_objects_expected_trajectory_state.yaml  temporal_objects_file_query.yaml  temporal_objects_learned_active_file_gate.yaml  temporal_objects_learned_trajectory_state.yaml  temporal_objects_no_memory.yaml  temporal_objects_no_memory_definitions.yaml  temporal_objects_no_ternary.yaml  temporal_objects_object_cycle.yaml  temporal_objects_position_aware_binding.yaml  temporal_objects_reappearance_binding.yaml  temporal_objects_reappearance_cycle.yaml  temporal_objects_tail_calibration_curved_4.yaml  temporal_objects_tail_calibration_curved_4_wide.yaml
refactor_rnd/: CONTEXT_RECURSION_LEDGER.md  POCKET_RECURSION_LEDGER.md  README.md  __init__.py  context_recursion.py  pocket_recursion.py  run_context_recursion.py  run_pocket_recursion.py
tsm/: cli.py  (+25 more)
(+10 files in other folders)
